--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Flask~=1.1.2
+Flask
 Flask-APScheduler
 Flask-Caching
-Flask-Cors~=3.0.8
+Flask-Cors
 Flask-Migrate
+Flask-Rebar
 Flask-SQLAlchemy
-marshmallow~=3.6.1
+marshmallow
 pytest-flask
-webargs~=6.1.0
-Werkzeug~=1.0.1
+webargs
+Werkzeug
